--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -189,7 +189,6 @@
 
 .login_container {
   position: fixed;
-  z-index: 1080;
   left: 0;
   top: 0;
   right: 0;
@@ -197,9 +196,9 @@
   width: 100%;
   min-height: 100%;
   height: 100%;
-
+  
   &_inner {
-    position: static;
+    position: relative;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: end;
@@ -209,6 +208,4 @@
     backdrop-filter: blur(4px);
     opacity: 1;
   }
-
-
 }
