--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -13,7 +13,7 @@
   padding: 3px;
   border-radius: 12px;
   background-color: transparent;
-  z-index: 10;
+  // z-index: 10;
   transition: all 0.25s ease;
 }
 
