--- a/src/components/UI/IconButton/IconButton.module.scss
+++ b/src/components/UI/IconButton/IconButton.module.scss
@@ -4,7 +4,6 @@
   
   button {
     display: flex;
-    justify-content: center;
     align-items: center;
     width: 100%;
     background-color: transparent;
